--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "prisma": "6.19",
     "socket.io": "^4.8.3"
   },
